[package]
name = "yukinet_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log4rs = "*"
log = "*"
fs = "*"
serde = "*"
serde_json = "*"
rand = "*"
hex = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
inquire = "*"
anyhow = "*"
futures-util = "*"
uuid = {  version = "*", features = ["fast-rng", "v7", "v4"] }
thiserror = "*"
once_cell = "*"