[package]
name = "yukinet_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log4rs = "*"
log = "*"
serde = "*"
serde_json = "*"
rand = "*"
hex = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
tokio-util = "*"
inquire = "*"
anyhow = "*"
futures-util = "*"
uuid = {  version = "*", features = ["fast-rng", "v7", "v4"] }
thiserror = "*"
http = "*"
url = "*"
clap = { version = "*", features = ["derive"] }
async-trait = "*"
async-recursion = "*"
sha2 = "*"
lz4_flex = "*"